refactor: addressing stricter IDE quality checks [incremental]